--- a/tex/exercise-library.tex
+++ b/tex/exercise-library.tex
@@ -27,6 +27,7 @@
 \let\Im\relax\DeclareMathOperator{\Im}{Im}
 \DeclareMathOperator{\RREF}{RREF}
 \DeclareMathOperator{\vspan}{span}
+\newcommand{\setBuilder}[2]{\left\{#1\,\middle|\,#2\right\}}
 
 \makeatletter
 \renewcommand*\env@matrix[1][*\c@MaxMatrixCols c]{%
