--- a/tex/exercise-library.tex
+++ b/tex/exercise-library.tex
@@ -67,6 +67,8 @@
 \input{modules/2-V/exercises/V3.tex} \newpage
 \startStandard{V4}
 \input{modules/2-V/exercises/V4.tex} \newpage
+\startStandard{V5}
+\input{modules/2-V/exercises/V5.tex} \newpage
 
 
 
@@ -79,7 +81,10 @@
 \input{modules/3-S/exercises/S3.tex} \newpage
 \startStandard{S4}
 \input{modules/3-S/exercises/S4.tex} \newpage
-
+\startStandard{S5}
+\input{modules/3-S/exercises/S5.tex} \newpage
+\startStandard{S6}
+\input{modules/3-S/exercises/S6.tex} \newpage
 
 
 \startModule{A}
