fix order of addition identity property in V1 exercise

--- a/tex/modules/2-V/exercises/V1.tex
+++ b/tex/modules/2-V/exercises/V1.tex
@@ -48,7 +48,7 @@ c \odot (x_1,y_1) &= (0, cy_1)
 \end{align*}
 \begin{enumerate}[(a)]
 \item Show that \textbf{scalar multiplication
-      distributes over scalar addition}, i.e. that  
+      distributes over scalar addition}, i.e. that
       \((c+d)\odot(x_1,x_2)=
       c\odot(x_1,x_2) \oplus d\odot(x_1,x_2)\) for every \(c,d \in \IR\) and \( (x_1,x_2) \in V\).
 \item Show that 1 is not a scalar multiplicative identity.
@@ -106,11 +106,11 @@ c \odot (x_1,y_1) &= (0, cy_1)
  \end{align*}
  \begin{enumerate}[(a)]
  \item Show that the \textbf{vector addition \(\oplus\) is associative}, i.e. that \(x \oplus (y \oplus z)=(x\oplus y)\oplus z\) for all \(x,y,z \in V\).
-       
+
  \item  Show that there is no additive identity element, i.e. there is no element \(\mathbf{z} \in V\) such that \(x \oplus \mathbf{z} = x\) for all \(x \in V\).
  \end{enumerate}
- \end{problem} 
- 
+ \end{problem}
+
  \begin{problem}{V1}
  Let \(V\) be the set of all pairs of real numbers with the operations, for any \((x_1,x_2), (y_1,y_2) \in V\), \(c\in \IR\),
  \begin{align*}
@@ -118,7 +118,7 @@ c \odot (x_1,y_1) &= (0, cy_1)
  c \odot (x_1,x_2) &= (cx_1, cx_2)
  \end{align*}
  \begin{enumerate}[(a)]
- \item Show that there is an \textbf{additive identity element}, i.e. an element \(\mathbf{z} \in V\) such that \(\mathbf{z}\oplus(x_1,x_2) = (x_1,x_2)\) for any \( (x_1,x_2) \in V\).
+ \item Show that there is an \textbf{additive identity element}, i.e. an element \(\mathbf{z} \in V\) such that \((x_1,x_2)\oplus\vec{z}= (x_1,x_2)\) for any \( (x_1,x_2) \in V\).
 \item Show that scalar multiplication does not distribute over vector addition, i.e. for some \(a \in \IR\) and \( (x_1,x_2), (y_1,y_2) \in V\), that \(a \odot \left( (x_1,x_2)\oplus (y_1,y_2) \right) \neq a \odot (x_1,x_2) \oplus a \odot (y_1,y_2) \).
  \end{enumerate}
 \end{problem}
