add missing false properties from V2 exercise

--- a/tex/modules/2-V/exercises/V2.tex
+++ b/tex/modules/2-V/exercises/V2.tex
@@ -76,9 +76,10 @@ addition commutivity, addition associativity, vector distribution.
 
  \end{problem}
  \begin{solution}
+  All properties are TRUE, so
  \(V\) is a vector space.
  \end{solution}
-%
+
  \begin{problem}{V2}
  Let \(V\) be the set of all pairs of real numbers with the operations, for any \((x_1,x_2), (y_1,y_2) \in V,c \in \IR\),
  \begin{align*}
@@ -93,7 +94,7 @@ addition commutivity, addition associativity, vector distribution.
  \begin{solution}
  Not a vector space as the following properties are FALSE: 1 is not a scalar multiplicative identity.
  \end{solution}
- 
+
  \begin{problem}{V2}
  Let \(V\) be the set of all pairs of real numbers with the operations, for any \((x_1,x_2), (y_1,y_2) \in V,c \in \IR\),
  \begin{align*}
@@ -106,7 +107,7 @@ addition commutivity, addition associativity, vector distribution.
    \(V\) is a vector space or not.
  \end{problem}
  \begin{solution}
- Not a vector space as the following properties are FALSE: scalar multiplication does not distribute over vector addition.
+ Not a vector space as the following properties are FALSE: scalar multiplication is not associative, 1 is not a scalar multiplication identity, scalar multiplication does not distribute over vector addition.
  \end{solution}
 %
 %
@@ -122,7 +123,7 @@ addition commutivity, addition associativity, vector distribution.
    \(V\) is a vector space or not.
  \end{problem}
  \begin{solution}
- Not a vector space as the following properties are FALSE: scalar multiplication does not distribute over vector addition, scalar multiplication does not distribute over scalar addition..
+ Not a vector space as the following properties are FALSE: scalar multiplication does not distribute over scalar addition.
  \end{solution}
 %
 %
