--- a/tex/modules/2-V/exercises/V3.tex
+++ b/tex/modules/2-V/exercises/V3.tex
@@ -40,7 +40,7 @@ Since this system has a solution,  \(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\)
 \end{problem}
 \begin{solution}
 \[\RREF\left(\begin{bmatrix}[ccc|c] 3 & 1 & 5 & 1 \\ 0 & -1 & 1 & 4 \\ -1 & 4 & -6 & 3 \end{bmatrix} \right) = \begin{bmatrix}[ccc|c] 1 & 0 & 2 & 0 \\ 0 & 1 & -1 & 0 \\ 0 & 0 & 0 & 1 \end{bmatrix}\]
-So \(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\) is not a linear combination of the three vectors.
+Since the corresponding system has no solutions, \(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\) is not a linear combination of the three vectors.
 \end{solution}
 
 
@@ -72,7 +72,7 @@ So \(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\) is not a linear combination of 
       0 & 0 & 0
     \end{bmatrix}
   \]
-  does not contain a contradiction,
+  does not require a contradiction,
   \(\begin{bmatrix} 0 \\ -1 \\ 6 \\ -7 \end{bmatrix}\) is
   a linear combination of the three vectors.
 \end{solution}
@@ -106,7 +106,7 @@ So \(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\) is not a linear combination of 
       0 & 0 & 0
     \end{bmatrix}
   \]
-  contains the contradiction \(0=1\),
+  requires the contradiction \(0=1\),
   \(\begin{bmatrix} 4 \\ -1 \\ 6 \\ -7 \end{bmatrix}\) is
   not a linear combination of the three vectors.
 \end{solution}
@@ -139,7 +139,7 @@ So \(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\) is not a linear combination of 
       0 & 0 & 0 & 0
     \end{bmatrix}
   \]
-  contains the contradiction \(0=1\),
+  requires the contradiction \(0=1\),
   \(\begin{bmatrix} 3 \\ -2 \\ 4 \end{bmatrix}\) is
   not a linear combination of the three vectors.
 \end{solution}
