--- a/tex/modules/3-S/sections/1.tex
+++ b/tex/modules/3-S/sections/1.tex
@@ -3,36 +3,47 @@
 
 \begin{applicationActivities}
 
-\begin{activity}{15}
-  In the previous module, we considered
-  \[S=\left\{
-  \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
-  \begin{bmatrix}2\\0\\0\\3\end{bmatrix},
-  \begin{bmatrix}3\\13\\7\\16\end{bmatrix},
-  \begin{bmatrix}-1\\10\\7\\14\end{bmatrix},
-  \begin{bmatrix}4\\3\\0\\2\end{bmatrix}
-  \right\}
-  \]
-  and showed that \(\vspan S\not=\IR^4\). Find two vectors from this set
-  that are linear combinations of the other three vectors.
+\begin{activity}{10}
+  Consider the two sets
+  \begin{align*}
+    S=\left\{
+  \begin{bmatrix}2\\3\\1\end{bmatrix},
+  \begin{bmatrix}1\\1\\4\end{bmatrix}
+  \right\} & & 
+    T=\left\{
+  \begin{bmatrix}2\\3\\1\end{bmatrix},
+  \begin{bmatrix}1\\1\\4\end{bmatrix}, 
+  \begin{bmatrix}-1\\0\\-11\end{bmatrix}
+  \right\} 
+  \end{align*}
+  Which of the following is true?
 
-  \begin{instructorNote}
-    Actually, the activity involved the corresponding vectors in \(\P^3\).
-  \end{instructorNote}
+	\begin{enumerate}[(A)]
+	\item \(\vspan S\) is bigger than \(\vspan T\).
+	\item \(\vspan S\) and \(\vspan T\) are the same size.
+	\item \(\vspan S\) is smaller than \(\vspan T\).
+	\end{enumerate}
+	
 \end{activity}
 
 \begin{definition}
   We say that a set of vectors is \term{linearly dependent} if one vector
   in the set belongs to the span of the others. Otherwise, we say the set
   is \term{linearly independent}.
+  \vspace{1em}
+  You can think of linearly dependent sets as containing a redundant vector,
+  in the sense that you can drop a vector out without reducing the span of the set.
 \end{definition}
 
 \begin{activity}{10}
   Suppose \(3\vect v_1-5\vect v_2=\vect v_3\), so the set
   \(\{\vect v_1,\vect v_2,\vect v_3\}\) is linearly dependent.
-  Is the vector equation \(x_1\vect v_1+x_2\vect v_2+x_3\vect v_3=\vect 0\)
-  consistent with one solution, consistent with infinitely many solutions,
-  or inconsistent?
+  Which of the following is true of the vector equation \(x_1\vect v_1+x_2\vect v_2+x_3\vect v_3=\vect 0\) ?
+  \begin{enumerate}[(A)]
+  \item It is consistent with one solution
+  \item It is consistent with infinitely many solutions
+  \item It is inconsistent.
+  \end{enumerate}
 \end{activity}
 
 \begin{fact}
@@ -80,8 +91,40 @@
 
 \begin{activity}{10}
   Is the set of polynomials \(\left\{
-  x^3+1,x^2+2,4-7x,2x^3+x
+  x^3+1,x^2+2x,x^2+7x+4
   \right\}\) linearly dependent or linearly independent?
 \end{activity}
+
+\begin{activity}{5}
+What is the largest number of vectors in \(\IR^4\) that can form a linearly independent set?
+\begin{enumerate}[(a)]
+\item \(3\)
+\item \(4\)
+\item \(5\)
+\item You can have infinitely many vectors and still be linearly independent.
+\end{enumerate}
+\end{activity}
+
+\begin{activity}{5}
+What is the largest number of vectors in \(\P^4\) that can form a linearly independent set?
+\begin{enumerate}[(a)]
+\item \(3\)
+\item \(4\)
+\item \(5\)
+\item You can have infinitely many vectors and still be linearly independent.
+\end{enumerate}
+\end{activity}
+
+\begin{activity}{5}
+What is the largest number of vectors in \(\P\) that can form a linearly independent set?
+\begin{enumerate}[(a)]
+\item \(3\)
+\item \(4\)
+\item \(5\)
+\item You can have infinitely many vectors and still be linearly independent.
+\end{enumerate}
+\end{activity}
+
+
 
 \end{applicationActivities}
