--- a/tex/modules/3-S/sections/2.tex
+++ b/tex/modules/3-S/sections/2.tex
@@ -3,11 +3,7 @@
 
 \begin{applicationActivities}
 
-\begin{activity}{10}
-  Last time we saw that \(\left\{
-  x^3+1,x^2+2,4-7x,2x^3+x
-  \right\}\) is linearly independent. Show that it spans \(\P^3\).
-\end{activity}
+
 
 \begin{definition}
   A \term{basis} is a linearly independent set that spans a vector space.
@@ -91,6 +87,13 @@
   containing all zeros except for a downward diagonal of ones.
 \end{fact}
 
+\begin{observation}
+Recall that a \textbf{subspace} of a vector space is a subset that is itself a vector space.
+\vspace{1em}
+One easy way to construct a subspace is to take the span of set, but if the set is linearly 
+dependent it may contain redundant vectors.
+\end{observation}
+
 \begin{activity}{10}
   Consider the set \(\left\{
   \begin{bmatrix}2\\3\\0\\1\end{bmatrix},
@@ -111,14 +114,36 @@
   \end{subactivity}
 
   \begin{subactivity}
-    Find a basis for \(\vspan\left\{
+     Let \(W=\vspan\left\{
     \begin{bmatrix}2\\3\\0\\1\end{bmatrix},
     \begin{bmatrix}2\\0\\1\\-1\end{bmatrix},
     \begin{bmatrix}2\\-3\\2\\-3\end{bmatrix},
     \begin{bmatrix}1\\5\\-1\\0\end{bmatrix}
     \right\}
-    \).
+    \).  \(W\) is a subspace of \(\IR^4\); find a basis for \(W\).
   \end{subactivity}
 \end{activity}
 
+\begin{fact}
+  To compute a basis for the subspace \(\vspan\{\vect v_1,\dots,\vect v_m\}\),
+  simply remove the vectors corresponding to the non-pivot columns of
+  \(\RREF[\vect v_1\,\dots\,\vect v_m]\).
+\end{fact}
+
+\begin{activity}{10}
+Let \(W\) be the subspace of \(\IR^4\) given by 
+ \[W = \vspan \left\{
+ \begin{bmatrix} 1 \\ 3 \\ 1 \\ -1 \end{bmatrix},
+ \begin{bmatrix} 2 \\ -1 \\ 1 \\ 2 \end{bmatrix},
+ \begin{bmatrix} 4 \\ 5 \\ 3 \\ 0 \end{bmatrix},
+ \begin{bmatrix} 3 \\ 2 \\ 2 \\ 1 \end{bmatrix}
+ \right\} \]
+ Find a basis for \(W\).
+\end{activity}
+
+\begin{activity}{10}
+Let \(W\) be the subspace of \(\P^3\) given by 
+ \[W = \vspan \left\{x^3+3x^2+x-1, 2x^3-x^2+x+2, 4x^3+5x^3+3x, 3x^3+2x^2+2x+1 \right\} \]
+ Find a basis for \(W\).
+\end{activity}
 \end{applicationActivities}
