--- a/tex/modules/2-V/exercises/V5.tex
+++ b/tex/modules/2-V/exercises/V5.tex
@@ -1,27 +1,27 @@
 \begin{problem}{V5}
-Determine if the set of all lattice points, i.e. $\{(x,y)\ \big|\ \text{$x$ and $y$ are integers} \}$ is a subspace of $\IR^2$.
+Determine if the set of all lattice points, i.e. \(\{(x,y)\ \big|\ \text{\(x\) and \(y\) are integers} \}\) is a subspace of \(\IR^2\).
 \end{problem}
 \begin{solution}
 This set is closed under addition, but not under scalar multiplication so it is not a subspace.
 \end{solution}
 
 \begin{problem}{V5}
-Determine if $\left\{ \begin{bmatrix} x \\ y \\ 0 \\ z \end{bmatrix}\  \bigg|\ x,y,z \in \IR\right\}$  a subspace of $\IR^4$.
+Determine if \(\left\{ \begin{bmatrix} x \\ y \\ 0 \\ z \end{bmatrix}\  \bigg|\ x,y,z \in \IR\right\}\)  a subspace of \(\IR^4\).
 \end{problem}
 \begin{solution}
-It is closed under addition and scalar multiplication, so it is a subspace.  Alternatively, it is the image of the linear transformation from $\IR^3 \rightarrow \IR^4$ given by $$\begin{bmatrix} x \\ y \\ z \end{bmatrix} \mapsto  \begin{bmatrix} x \\ y \\ 0 \\ z \end{bmatrix}.$$
+It is closed under addition and scalar multiplication, so it is a subspace.  Alternatively, it is the image of the linear transformation from \(\IR^3 \rightarrow \IR^4\) given by \[\begin{bmatrix} x \\ y \\ z \end{bmatrix} \mapsto  \begin{bmatrix} x \\ y \\ 0 \\ z \end{bmatrix}.\]
 \end{solution}
 
 
-\begin{problem}{V5} Let $W$ be the set of all polynomials of even degree.  Determine if $W$ is a subspace of the vector space of all polynomials.
+\begin{problem}{V5} Let \(W\) be the set of all polynomials of even degree.  Determine if \(W\) is a subspace of the vector space of all polynomials.
 \end{problem}
 \begin{solution}
-$W$ is closed under scalar multiplication, but not under addition.  For example, $x-x^2$ and $x^2$ are both in $W$, but $(x-x^2)+(x^2)=x \notin W$.
+\(W\) is closed under scalar multiplication, but not under addition.  For example, \(x-x^2\) and \(x^2\) are both in \(W\), but \((x-x^2)+(x^2)=x \notin W\).
 \end{solution}
 
 
-\begin{problem}{V5} Let $W$ be the set of all polynomials of the form
-\(ax^3+bx\).  Determine if $W$ is a subspace of \(\P^3\).
+\begin{problem}{V5} Let \(W\) be the set of all polynomials of the form
+\(ax^3+bx\).  Determine if \(W\) is a subspace of \(\P^3\).
 \end{problem}
 \begin{solution}
 Yes because \(s(a_1x^3+b_1x)+t(a_2x^3+b_2x)=
@@ -72,7 +72,7 @@ No.
 \end{solution}
 
 \begin{problem}{V5} Let \(W\) be the set of all complex numbers
-that are purely real (i.e of the form $a+0i$)  or purely imaginary (i.e. of the form $0+bi$).
+that are purely real (i.e of the form \(a+0i\))  or purely imaginary (i.e. of the form \(0+bi\)).
 Determine if \(W\) is a subspace of \(\IC\).
 \end{problem}
 \begin{solution}
