--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -336,8 +336,7 @@ Since the last row lacks a pivot, the vectors \textbf{do not span} \(\IR^3\).
 Consider the following two sets of Euclidean vectors.
 \[
   W = \setBuilder{\begin{bmatrix} x \\ y \\ z \end{bmatrix}}{x+y=3z}
-\]
-\[
+\hspace{3em}
   U = \setBuilder{\begin{bmatrix} x \\ y \\ z \end{bmatrix}}{x+y=3z+2}
 \]
 Show that one of these sets is a subspace of \(\IR^3\), and
