--- a/tex/exercise-library.tex
+++ b/tex/exercise-library.tex
@@ -24,6 +24,7 @@
 \newcommand{\IR}{\mathbb{R}}
 \newcommand{\IC}{\mathbb{C}}
 \renewcommand{\P}{\mathcal{P}}
+\newcommand{\setList}[1]{\left\{#1\right\}}
 \let\Im\relax\DeclareMathOperator{\Im}{Im}
 \DeclareMathOperator{\RREF}{RREF}
 \DeclareMathOperator{\vspan}{span}
