--- a/tex/modules/3-S/exercises/S2.tex
+++ b/tex/modules/3-S/exercises/S2.tex
@@ -1,8 +1,8 @@
 \begin{problem}{S2}
-Determine if the set $\left\{\begin{bmatrix} 1 \\ 1 \\ -1 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 1 \end{bmatrix},\begin{bmatrix} 2 \\ 0 \\ -2 \end{bmatrix}\right\}$ is a basis of $\IR^3$.
+Determine if the set \(\setList{\begin{bmatrix} 1 \\ 1 \\ -1 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 1 \end{bmatrix},\begin{bmatrix} 2 \\ 0 \\ -2 \end{bmatrix}}\) is a basis of \(\IR^3\).
 \end{problem}
 \begin{solution}
-$$\RREF\left(\begin{bmatrix} 1 & 3 & 2 \\ 1 & -1 & 0 \\ -1 & 1 & -2 \end{bmatrix} \right)= \begin{bmatrix} 1 & 0 &0 \\ 0 & 1 & 0 \\ 0 & 0 & 1\end{bmatrix}$$
+\[\RREF\left(\begin{bmatrix} 1 & 3 & 2 \\ 1 & -1 & 0 \\ -1 & 1 & -2 \end{bmatrix} \right)= \begin{bmatrix} 1 & 0 &0 \\ 0 & 1 & 0 \\ 0 & 0 & 1\end{bmatrix}\]
 Since the resulting matrix is the identity matrix, it is a basis.
 \end{solution}
 
@@ -11,10 +11,10 @@ Since the resulting matrix is the identity matrix, it is a basis.
 
 
 \begin{problem}{S2}
-Determine if the set $\left\{ \begin{bmatrix} 0 \\ 1 \\ 1 \\ 1 \end{bmatrix}, \begin{bmatrix} 1 \\ -1 \\ 0 \\ 2 \end{bmatrix}, \begin{bmatrix} 1 \\ 0 \\ -1 \\ 0 \end{bmatrix}, \begin{bmatrix}0 \\ 2 \\ 0 \\ -1 \end{bmatrix} \right\}$ is a basis of $\IR^4$.
+Determine if the set \(\setList{ \begin{bmatrix} 0 \\ 1 \\ 1 \\ 1 \end{bmatrix}, \begin{bmatrix} 1 \\ -1 \\ 0 \\ 2 \end{bmatrix}, \begin{bmatrix} 1 \\ 0 \\ -1 \\ 0 \end{bmatrix}, \begin{bmatrix}0 \\ 2 \\ 0 \\ -1 \end{bmatrix} }\) is a basis of \(\IR^4\).
 \end{problem}
 \begin{solution}
-$$\RREF\left(\begin{bmatrix} 0 & 1 & 1 & 0 \\ 1 & -1 & 0 & 2   \\ 1 & 0 & -1 & 0  \\ 1 & 2 & 0 & -1  \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & 0 & 1  \\ 0 & 1 & 0 & -1  \\ 0 & 0 & 1 & 1  \\ 0 & 0 & 0 & 0 \end{bmatrix} $$
+\[\RREF\left(\begin{bmatrix} 0 & 1 & 1 & 0 \\ 1 & -1 & 0 & 2   \\ 1 & 0 & -1 & 0  \\ 1 & 2 & 0 & -1  \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & 0 & 1  \\ 0 & 1 & 0 & -1  \\ 0 & 0 & 1 & 1  \\ 0 & 0 & 0 & 0 \end{bmatrix}\]
 Since this is not the identity matrix, the set is not a basis.
 \end{solution}
 
@@ -25,7 +25,7 @@ Since this is not the identity matrix, the set is not a basis.
     \begin{bmatrix} 3 \\ -1 \\ 2 \end{bmatrix},
     \begin{bmatrix} 2 \\ 0 \\ 2 \end{bmatrix},
     \begin{bmatrix} 1 \\ 4 \\ -1 \end{bmatrix}
-  \right\}\) is a basis of $\IR^3$.
+  \right\}\) is a basis of \(\IR^3\).
 \end{problem}
 \begin{solution}
   \[\RREF\left(
@@ -50,7 +50,7 @@ Since the resulting matrix is the identity matrix, it is a basis.
     \begin{bmatrix} 2 \\ 0 \\ 2 \\ 4\end{bmatrix},
     \begin{bmatrix} 1 \\ -1 \\ 0 \\ -1\end{bmatrix},
     \begin{bmatrix} -1 \\ 3 \\ 0 \\ 5\end{bmatrix}
-  \right\}\) is a basis of $\IR^4$.
+  \right\}\) is a basis of \(\IR^4\).
 \end{problem}
 \begin{solution}
   \[\RREF\left(
@@ -70,7 +70,70 @@ Since the resulting matrix is not the identity matrix, it is not a basis.
 \end{solution}
 
 
+\begin{problem}{S2}
+Determine if the set
+\(\setList{
+  \begin{bmatrix} 1 \\ 1 \\ 2 \\1 \end{bmatrix},
+  \begin{bmatrix} 3 \\ 3 \\ 6 \\ 3 \end{bmatrix},
+  \begin{bmatrix}3 \\ -1 \\ 3 \\ -2\end{bmatrix},
+  \begin{bmatrix} 7 \\ -1 \\ 8 \\ -3 \end{bmatrix}
+}\) is a basis for \(\IR^4\).
+\end{problem}
+\begin{solution}
+\[\RREF\left(\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \\ 0 & 0 & 0 & 0  \end{bmatrix}\]
+Since the resulting matrix is not the identity matrix, it is not a basis.
+\end{solution}
 
+\begin{problem}{S2}
+Determine if the set
+\(\setList{
+  \begin{bmatrix} 8 \\ 21 \\ -7 \end{bmatrix},
+  \begin{bmatrix} -3 \\ -8 \\ 3 \end{bmatrix},
+  \begin{bmatrix} -1 \\ -3 \\ 2 \end{bmatrix}
+}\) is a basis for \(\IR^3\).
+\end{problem}
+\begin{solution}
+\[\RREF\left(\begin{bmatrix} 8 & -3 & -1  \\ 21 & -8 & -3  \\ -7 & 3 & 2  \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & 1  \\ 0 & 1 & 3  \\ 0 & 0 & 0 \end{bmatrix}\]
+Since the resulting matrix is not the identity matrix, it is not a basis.
+\end{solution}
 
+\begin{problem}{S2}
+Determine if the set
+\(
+  \setList{
+    \begin{bmatrix} 2 \\ -1 \\ 4 \end{bmatrix},
+    \begin{bmatrix} 3 \\ 12 \\ -9 \end{bmatrix},
+    \begin{bmatrix} -4 \\ 2 \\ -8 \end{bmatrix}
+  }
+\) is a basis for \(\IR^3\).
+\end{problem}
+\begin{solution}
+Since
+\[
+  \RREF\begin{bmatrix}
+    2 & 3 &  -4 \\
+    -1 & 12 &  2 \\
+    4 & -9 &  -8
+  \end{bmatrix} =
+  \begin{bmatrix}
+    1 & 0 & -2 \\
+    0 & 1 & 0 \\
+    0 & 0 & 0
+  \end{bmatrix}
+\]
+Since the resulting matrix is not the identity matrix, it is not a basis.
+\end{solution}
 
-
+\begin{problem}{S2}
+Determine if the set
+\(\setList{
+  \begin{bmatrix} 1 \\ 0 \\ 2 \\1 \end{bmatrix},
+  \begin{bmatrix} 3 \\ 1 \\ 0 \\ -3 \end{bmatrix},
+  \begin{bmatrix} 0 \\ 3 \\ 0 \\ -2 \end{bmatrix},
+  \begin{bmatrix}-1 \\ 1 \\ -1 \\ -1 \end{bmatrix}
+}\) is a basis for \(\IR^4\).
+\end{problem}
+\begin{solution}
+\[\RREF\left(\begin{bmatrix}1 & 3 & 0 & -1 \\ 0 & 1 & 3 & 1 \\ 2 & 0 & 0 & -1 \\ 1 & -3 & -2 & -1 \end{bmatrix} \right) =\begin{bmatrix} 1 & 0 & 0 & 0 \\ 0 & 1 & 0 & 0 \\ 0 & 0 & 1 & 0 \\ 0 & 0 & 0 & 1 \end{bmatrix}\]
+Since this is the identity matrix, this set is a basis.
+\end{solution}
