Make text fit on slide in V.3.7

--- a/tex/modules/2-V/sections/3.tex
+++ b/tex/modules/2-V/sections/3.tex
@@ -92,14 +92,15 @@
 \end{activity}
 
 \begin{activity}{10}
-  Consider the set of third-degree polynomials \[S=\left\{
-  2x^3+3x^2-1,
+  Consider the set of third-degree polynomials 
+  \begin{align*}
+  S=\{
+  &2x^3+3x^2-1,
   2x^3+3,
-  3x^3+13x^2+7x+16,
-  -x^3+10x^2+7x+14,
-  4x^3+3x^2+2
-  \right\}
-  .\]
+  3x^3+13x^2+7x+16, \\
+  &-x^3+10x^2+7x+14,
+  4x^3+3x^2+2 \} .
+  \end{align*}
   Does
   \(\P^3=\vspan S\)?
   (Hint: first rewrite the question so it is about Euclidean vectors.)
@@ -108,7 +109,7 @@
   % \end{subactivity}
 \end{activity}
 
-\begin{activity}{10}
+\begin{activity}{5}
 Consider the set of matrices
 \[ S = \left\{
 		\begin{bmatrix} 1 & 3 \\ 0 & 1 \end{bmatrix},
@@ -118,7 +119,7 @@ Consider the set of matrices
 Does \(M_{2,2} = \vspan S\)?
 \end{activity}
 
-\begin{activity}{10}
+\begin{activity}{5}
 Let \(\vec{v}_1, \vec{v}_2, \vec{v}_3 \in \IR^7\) be three vectors, and suppose \(\vec{w}\) is another vector with \(\vec{w} \in \vspan \left\{ \vec{v}_1, \vec{v}_2, \vec{v}_3 \right\}\).  What can you conclude about \( \vspan \left\{ \vec{w}, \vec{v}_1, \vec{v}_2, \vec{v}_3 \right\} \) ?
 \begin{enumerate}[(a)]
 \item \( \vspan \left\{ \vec{w}, \vec{v}_1, \vec{v}_2, \vec{v}_3 \right\} \) is larger than \( \vspan \left\{ \vec{v}_1, \vec{v}_2, \vec{v}_3 \right\} \).
